--- a/LLM_Analise_de_Sentimento_e_tradução_.ipynb
+++ b/LLM_Analise_de_Sentimento_e_tradução_.ipynb
@@ -182,7 +182,7 @@
       "cell_type": "code",
       "source": [
         "#Substitua o 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxx' com o seu token\n",
-        "api_yt = 'AIzaSyCnJhc8NKJEWVJe0liyEu6ipvyi29RDfOw'"
+        "api_yt = 'xxxxxxxxxxxxxxxxx'"
       ],
       "metadata": {
         "id": "0MBjqRMmBAIs"
